--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,15 @@
             <artifactId>rxtx</artifactId>
             <version>2.1.7</version>
         </dependency>
+
+<!--
+        <dependency>
+            <groupId>org.rxtx</groupId>
+            <artifactId>rxtxcomm</artifactId>
+            <version>2.0-7pre1</version>
+        </dependency>
+-->
+
         <!--
                 <dependency>
                     <groupId>javax.comm</groupId>
